🎀 make sure schedule/talks/speakers menu doesn't micro-jump while navigating

--- a/src/pretalx/static/cfp/scss/_layout.scss
+++ b/src/pretalx/static/cfp/scss/_layout.scss
@@ -69,7 +69,7 @@ header {
   border: none;
 
   main {
-    padding: 20px;
+    padding: 1rem;
   }
 }
 
